# tqsl

./: AUTHORS.txt  CMakeLists.txt  INSTALL  README  README.MD  WindowsBuildSetup.md  WindowsBuildSetup.txt  linux-make-appimage.sh  linux-make-tarball.sh  linux-uninstall.sh  macos_createdmg.sh  toolset-to-vc08.py
apps/: .gitignore  .project  CMakeLists.txt  ChangeLog.txt  LICENSE.rtf  TrustedQSL.spec.in  bottom.xpm  broken-cert.xpm  ca-bundle.crt  cert.xpm  certtree.cpp  certtree.h  crqwiz.cpp  crqwiz.h  delete.xpm  delete_dis.xpm  download.xpm  download_dis.xpm  dxcc.cpp  dxcc.h  edit.xpm  edit_dis.xpm  expired.xpm  extwizard.cpp  extwizard.h  file_edit.xpm  file_edit_dis.xpm  folder.xpm  getpassword.cpp  getpassword.h  home.xpm  import.xpm  json_defs.h  jsonreader.cpp  jsonreader.h  jsonval.cpp  jsonval.h  jsonwriter.cpp  jsonwriter.h  key-new.xpm  (+47 more)
apps/help/tqslapp/: addcertaccept.htm  addcertreq.htm  additional-info.htm  backuprestore.htm  cab-modes.htm  cabrillo.htm  certaccept.htm  certificateproperties.htm  certificatesecurity.htm  certificatevalidity.htm  certreplace.htm  certreq.htm  certs-icons.htm  cmdline.htm  configops.htm  configxml.htm  contents.hhc  crq0.htm  crq1.htm  crq2.htm  crq3.htm  crq4.htm  daterng.htm  deletecert.htm  diagmode.htm  example1.htm  expiration.htm  fileops.htm  files-icons.htm  glossary.htm  index.htm  installation.htm  key-concepts.htm  load-certificate.htm  localization.htm  login.htm  lotw.htm  main.htm  moving.htm  netproxy.htm  (+22 more)
apps/lang/: makemo.sh  merge.sh  translators
apps/lang/ca_ES/: tqslapp.mo  tqslapp.po
apps/lang/de/: tqslapp.mo  tqslapp.po
apps/lang/es/: tqslapp.mo  tqslapp.po
apps/lang/fi/: tqslapp.mo  tqslapp.po
apps/lang/fr/: tqslapp.mo  tqslapp.po
apps/lang/hi_IN/: tqslapp.mo  tqslapp.po  wxstd.mo
apps/lang/it/: tqslapp.mo  tqslapp.po
apps/lang/ja/: tqslapp.mo  tqslapp.po
apps/lang/pl_PL/: tqslapp.mo  tqslapp.po
apps/lang/pt/: tqslapp.mo  tqslapp.po
apps/lang/ru/: tqslapp.mo  tqslapp.po
apps/lang/sv_SE/: tqslapp.mo  tqslapp.po
apps/lang/tr_TR/: tqslapp.mo  tqslapp.po
apps/lang/zh_CN/: tqslapp.mo  tqslapp.po
apps/lang/zh_TW/: tqslapp.mo  tqslapp.po
cmakemodules/: FindBDB.cmake  FindCURL.cmake  FindLMDB.cmake  FindZLIB.cmake
html/: README  tqslapi.html
html/trustedqsl/: adif.htm  apiguide.html  faq.html  format_design.html  gloss.html  index-new.html  index.html  license.txt  mailing.html  newindex.html  php.html  project_plan.html  tqsl_api.html  userguide.html  vendors.html
html/trustedqsl/GAbbI/: AppendixA.htm  GAbbISample.htm  TableBand.htm  TableContinents.htm  TableDXCC.htm  TableModes.htm  TableSatellites.htm  TableStation_Types.htm  gabbi.htm
src/: .cproject  .gitignore  .project  CMakeLists.txt  ChangeLog.txt  Doxyfile  LICENSE  adif.cpp  adif.h  cabrillo.cpp  cabrillo.h  config.xml  converter.c  converter.cpp  dumptqsldata.cpp  gen_crq.cpp  load_cert.cpp  location.cpp  location.h  openssl_cert.cpp  openssl_cert.h  station_loc.cpp  tqslconvert.cpp  tqslconvert.h  tqslerrno.h  tqslexc.h  tqsllib-doc.h  tqsllib.cpp  tqsllib.css  tqsllib.h  tqsllib.rc.in  tqsllib.spec.in  tqsllib2.def  windirent.h  winstrdefs.h  xml.cpp  xml.h
src/doxygen/html/: .gitignore  adif_8h.html  adif_8h_source.html  annotated.html  cabrillo_8h.html  cabrillo_8h_source.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x64.html  globals_0x74.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_t.html  globals_type.html  globals_vars.html  group__ADIF.html  group__Cabrillo.html  group__CertStuff.html  group__Convert.html  group__Data.html  group__Sign.html  group__Util.html  index.html  menudata.js  modules.html  structTQSL__QSO__RECORD-members.html  structTQSL__QSO__RECORD.html  structtQSL__Date-members.html  structtQSL__Date.html  structtQSL__Time-members.html  structtQSL__Time.html  structtqsl__adifFieldDefinitions-members.html  structtqsl__adifFieldDefinitions.html  structtqsl__adifFieldResults-members.html  (+14 more)
win32-msi/tqsl-install/: AlertUninstall.wxs  MyExitDialog.wxs  MyInstallDirDlg.wxs  MyWixUI_InstallDir.wxs  Product.wxs  helpfrag.wxs  langfrags.wxs  tqsl-install.sln  tqsl-install.wixproj  update-helpfrag.cmd
